Fix bug where projects look different on Safari

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -87,7 +87,7 @@ $font: 'Montserrat', sans-serif;
 }
 
 #bio-img-container {
-  margin-top: 15vh;
+  margin-top: 20vh;
   margin-left: 4vw;
   border-radius: 50%;
   width: 30vw;
@@ -126,7 +126,7 @@ $font: 'Montserrat', sans-serif;
 
   #bio-img-container {
     position: absolute;
-    margin-top: 20vh;
+    margin-top: 21vh;
     margin-right: 0;
     width: 20em;
     height: 20em;
